feat: implement top navigation bar structure and styles

--- a/index.html
+++ b/index.html
@@ -12,5 +12,27 @@
 </head>
 <body>
 
+<!--Navigation Bar-->
+<header id="navbar" class="top-nav nav-glass">
+    <nav class="nav-full">
+        <ul class="nav-list">
+            <li><a href="#home" class="nav-link active"><i data-lucide="home"></i> Home</a></li>
+            <li><a href="#projects" class="nav-link"><i data-lucide="folder"></i> Projects</a></li>
+            <li><a href="#skills" class="nav-link"><i data-lucide="cpu"></i> Skills</a></li>
+            <li><a href="#education" class="nav-link"><i data-lucide="book-open"></i> Education</a></li>
+            <li><a href="#contact" class="nav-link"><i data-lucide="mail"></i> Contact</a></li>
+        </ul>
+    </nav>
+
+    <button id="menu-toggle" aria-label="Toggle menu" class="nav-toggle-button" aria-expanded="false">
+        <i data-lucide="menu"></i>
+    </button>
+</header>
+
+
+
+<script>
+    lucide.createIcons();
+</script>
 </body>
 </html>
