feat: add home section with profile image, intro, social links

--- a/index.html
+++ b/index.html
@@ -29,6 +29,24 @@
     </button>
 </header>
 
+<!--Home-->
+<section id="home" class="home-section">
+    <div class="home-bg"></div>
+    <div class="intro">
+        <img src="assets/images/profile-pic.jpeg" alt="Your profile photo" class="profile-pic" />
+        <h1>Long Nguyen</h1>
+        <p>Computer Science student passionate about full-stack development, game design and AI.</p>
+        <div class="social-links">
+            <a href="https://github.com/czerny1728" target="_blank" class="social-button">
+                <i data-lucide="github"></i> GitHub
+            </a>
+            <a href="https://www.linkedin.com/in/long-nguyen-a3473a286/" target="_blank" class="social-button">
+                <i data-lucide="linkedin"></i> LinkedIn
+            </a>
+        </div>
+    </div>
+</section>
+
 
 
 <script>
