feat: add main content containers for dynamic sections

--- a/index.html
+++ b/index.html
@@ -47,7 +47,13 @@
     </div>
 </section>
 
-
+<!-- Main Content -->
+<main class="main-content">
+    <div id="projects-container"></div>
+    <div id="skills-container"></div>
+    <div id="education-container"></div>
+    <div id="contact-container"></div>
+</main>
 
 <script>
     lucide.createIcons();
