feat: add fade-in animation on scroll using IntersectionObserver and dynamically load sections with fetch. Also, style project cards with image and text layout. Added observer for .glass and .dark-glass fade-in and implemented loadSection() and loaded projects.html, skills.html, etc. Added layout for project card, image on right, text left, responsive tweaks.

--- a/projects.html
+++ b/projects.html
@@ -1,10 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<section id="projects" class="section">
+    <h2>Projects</h2>
+    <div class="glass project-card">
+        <div class="project-content">
+            <div class="project-details">
+                <h3>Flappy Bird</h3>
 
-</body>
-</html>
+                <div class="tech-stack">
+                    <span class="made-with">Made with:</span>
+                    <div class="tech-icons">
+                        <iconify-icon icon="skill-icons:java-light" width="35"></iconify-icon>
+                    </div>
+                </div>
+
+                <p class="project-description">
+                    A 2D arcade game built using Java. Players control a bird as it attempts to fly through a series of pipes without touching them. The game features simple controls—just press SPACE to make the bird fly upward, while gravity pulls it downward automatically. Players aim to achieve the highest score by navigating through as many pipes as possible while avoiding collisions.
+                </p>
+
+                <a href="https://github.com/czerny1728/flappy-bird" target="_blank" class="github-button">
+                    <i data-lucide="github"></i> GitHub
+                </a>
+            </div>
+
+            <div class="project-image">
+                <img src="assets/images/flappy-preview.png" alt="Flappy Bird preview" />
+            </div>
+        </div>
+    </div>
+</section>
