--- a/skills.html
+++ b/skills.html
@@ -1,10 +1,65 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<section id="skills" class="section">
+    <h2>Skills</h2>
 
-</body>
-</html>
+    <div class="skills-category">
+        <h3 class="skills-heading">Backend</h3>
+        <div class="skills-list">
+      <span class="skill-pill">
+        <iconify-icon icon="skill-icons:java-light"></iconify-icon>
+        Java
+      </span>
+            <span class="skill-pill">
+        <iconify-icon icon="logos:python"></iconify-icon>
+        Python
+      </span>
+            <span class="skill-pill">
+        <iconify-icon icon="streamline-logos:c-language-logo-solid"></iconify-icon>
+        C
+      </span>
+            <span class="skill-pill">
+        <iconify-icon icon="vscode-icons:file-type-sql"></iconify-icon>
+        SQL
+      </span>
+        </div>
+    </div>
+
+    <div class="category-divider"></div>
+
+    <div class="skills-category">
+        <h3 class="skills-heading">Practices</h3>
+        <div class="skills-list">
+      <span class="skill-pill">
+        <i data-lucide="layers" class="skill-icon"></i>
+        Object-Oriented Programming (OOP)
+      </span>
+            <span class="skill-pill">
+        <i data-lucide="list" class="skill-icon"></i>
+        Data Structures
+      </span>
+            <span class="skill-pill">
+        <i data-lucide="check-circle" class="skill-icon"></i>
+        Unit Testing
+      </span>
+            <span class="skill-pill">
+        <i data-lucide="terminal" class="skill-icon"></i>
+        Test Driven Development (TDD)
+      </span>
+        </div>
+    </div>
+
+    <div class="category-divider"></div>
+
+    <div class="skills-category">
+        <h3 class="skills-heading">Tools</h3>
+        <div class="skills-list">
+      <span class="skill-pill">
+        <iconify-icon icon="skill-icons:git"></iconify-icon>
+        Git
+      </span>
+            <span class="skill-pill">
+        <iconify-icon icon="skill-icons:github-dark"></iconify-icon>
+        GitHub
+      </span>
+        </div>
+    </div>
+</section>
