feat: add contact section with glass-style form Added .contact-box, .contact-form, .glass-pill-input, .glass-textarea, .glass-submit.

--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<section id="contact" class="section">
+    <h2>Contact</h2>
+    <div class="glass contact-box">
+        <p>Please contact me directly at <strong>wnc2zb@virginia.edu</strong> or through this form.</p>
 
-</body>
-</html>
+        <form class="contact-form">
+            <input type="email" name="email" placeholder="Your email" class="glass-pill-input" required />
+            <textarea name="message" placeholder="Your message" class="glass-textarea" rows="4" required></textarea>
+
+            <button type="submit" class="glass-submit">
+                <i data-lucide="send"></i> Send
+            </button>
+        </form>
+    </div>
+</section>
