--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 <header id="navbar" class="top-nav nav-glass">
     <nav class="nav-full">
         <ul class="nav-list">
-            <li><a href="#home" class="nav-link active"><i data-lucide="home"></i> Home</a></li>
-            <li><a href="#projects" class="nav-link"><i data-lucide="folder"></i> Projects</a></li>
-            <li><a href="#skills" class="nav-link"><i data-lucide="cpu"></i> Skills</a></li>
-            <li><a href="#education" class="nav-link"><i data-lucide="book-open"></i> Education</a></li>
-            <li><a href="#contact" class="nav-link"><i data-lucide="mail"></i> Contact</a></li>
+            <li><a href="#home" class="nav-link active"><i data-lucide="home"></i> <span class="nav-text">Home</span></a></li>
+            <li><a href="#projects" class="nav-link"><i data-lucide="folder"></i> <span class="nav-text">Projects</span></a></li>
+            <li><a href="#skills" class="nav-link"><i data-lucide="cpu"></i> <span class="nav-text">Skills</span></a></li>
+            <li><a href="#education" class="nav-link"><i data-lucide="book-open"></i> <span class="nav-text">Education</span></a></li>
+            <li><a href="#contact" class="nav-link"><i data-lucide="mail"></i> <span class="nav-text">Contact</span></a></li>
         </ul>
     </nav>
 
