--- a/contact.html
+++ b/contact.html
@@ -3,10 +3,9 @@
     <div class="glass contact-box">
         <p>Please contact me directly at <strong>wnc2zb@virginia.edu</strong> or through this form.</p>
 
-        <form class="contact-form">
+        <form class="contact-form" action="https://formspree.io/f/myzjndyn" method="POST">
             <input type="email" name="email" placeholder="Your email" class="glass-pill-input" required />
             <textarea name="message" placeholder="Your message" class="glass-textarea" rows="4" required></textarea>
-
             <button type="submit" class="glass-submit">
                 <i data-lucide="send"></i> Send
             </button>
