fix: correct contact form submission and backend integration Prevent default form submission properly to avoid page reload. Update fetch URL and handle response status correctly. Add CORS configuration to allow frontend requests from correct origin.

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
     <div class="glass contact-box">
         <p>Please contact me directly at <strong>wnc2zb@virginia.edu</strong> or through this form.</p>
 
-        <form class="contact-form" action="https://formspree.io/f/myzjndyn" method="POST">
+        <form class="contact-form">
             <input type="email" name="email" placeholder="Your email" class="glass-pill-input" required />
             <textarea name="message" placeholder="Your message" class="glass-textarea" rows="4" required></textarea>
             <button type="submit" class="glass-submit">
