feat(home): add fade-in and slide-in transition to name, description text, navigation bar and profile picture Added CSS transitions for the home section heading (name) and subtext. Updated JavaScript to apply the animation classes on page load for a cohesive intro experience.

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     <div class="home-bg"></div>
     <div class="intro">
         <img src="assets/images/profile-pic.jpeg" alt="Your profile photo" class="profile-pic" />
-        <h1>Long Nguyen</h1>
-        <p>Computer Science student passionate about full-stack development, game design and AI.</p>
+        <h1 class="intro-heading">Long Nguyen</h1>
+        <p class="intro-subtext">Computer Science student passionate about full-stack development, game design and AI.</p>
         <div class="social-links">
             <a href="https://github.com/czerny1728" target="_blank" class="social-button">
                 <i data-lucide="github"></i> GitHub
