--- a/contact.html
+++ b/contact.html
@@ -8,13 +8,13 @@
             <textarea name="message" placeholder="Your message" class="glass-textarea" rows="4" required></textarea>
 
             <button type="submit" class="glass-submit">
-                <i data-lucide="send" class="flying-mail"></i>
                 <span class="send-label">Send</span>
+                <span class="sending-dots hidden">
+                    <span class="dot">.</span>
+                    <span class="dot">.</span>
+                    <span class="dot">.</span>
+                </span>
             </button>
-
-            <div class="mail-animation-wrapper">
-                <i data-lucide="mailbox" class="postbox"></i>
-            </div>
 
         </form>
     </div>
