Fix missing send icon in contact form button Add the data-lucide=send icon back to the submit button to ensure the send icon displays correctly

--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
             <textarea name="message" placeholder="Your message" class="glass-textarea" rows="4" required></textarea>
 
             <button type="submit" class="glass-submit">
+                <i data-lucide="send" class="send-icon"></i>
                 <span class="send-label">Send</span>
                 <span class="sending-dots hidden">
                     <span class="dot">.</span>
