--- a/projects.html
+++ b/projects.html
@@ -22,4 +22,30 @@
             </div>
         </div>
     </div>
+
+    <div class="glass project-card">
+        <div class="project-content">
+            <div class="project-details">
+                <h3>Personal Website</h3>
+                <div class="tech-stack">
+                    <span class="made-with">Made with:</span>
+                    <div class="tech-icons">
+                        <iconify-icon icon="flowbite:html-solid" width="35"></iconify-icon>
+                        <iconify-icon icon="material-icon-theme:css-map" width="35"></iconify-icon>
+                        <iconify-icon icon="vscode-icons:file-type-js-official" width="35"></iconify-icon>
+                        <iconify-icon icon="skill-icons:java-light" width="35"></iconify-icon>
+                    </div>
+                </div>
+                <p class="project-description">
+                    Designed and developed a responsive personal portfolio website using HTML, CSS, and JavaScript to showcase projects, skills, and experience. The site features clean, modern design with smooth scrolling navigation, interactive project cards with technology icons, and a dynamic contact form with animated send icon. It adapts seamlessly to different screen sizes, providing an optimal user experience on desktop and mobile devices.
+                </p>
+                <a href="https://github.com/czerny1728/czerny1728.github.io" target="_blank" class="github-button">
+                    <i data-lucide="github"></i> GitHub
+                </a>
+            </div>
+            <div class="project-image">
+                <img src="assets/images/personal-web-prev.png" alt="Flappy Bird preview" />
+            </div>
+        </div>
+    </div>
 </section>
