chore: update Flappy Bird game preview
Replaced the existing Flappy Bird preview media with a new version reflecting recent UI improvements, chiefly dynamic scaling.

--- a/projects.html
+++ b/projects.html
@@ -30,15 +30,15 @@
                 <div class="tech-stack">
                     <span class="made-with">Made with:</span>
                     <div class="tech-icons">
-                        <iconify-icon icon="flowbite:html-solid" width="35"></iconify-icon>
-                        <iconify-icon icon="material-icon-theme:css-map" width="35"></iconify-icon>
-                        <iconify-icon icon="vscode-icons:file-type-js-official" width="35"></iconify-icon>
+                        <iconify-icon icon="skill-icons:html" width="35"></iconify-icon>
+                        <iconify-icon icon="skill-icons:css" width="35"></iconify-icon>
+                        <iconify-icon icon="skill-icons:javascript" width="35"></iconify-icon>
                         <iconify-icon icon="skill-icons:docker" width="35"></iconify-icon>
                         <iconify-icon icon="skill-icons:java-light" width="35"></iconify-icon>
                     </div>
                 </div>
                 <p class="project-description">
-                    Designed and developed a responsive personal portfolio website using HTML, CSS, and JavaScript to showcase projects, skills, and experience. The site has a clean, simple design with smooth scrolling navigation, interactive project cards with technology icons, and a dynamic contact form. It adapts to different screen sizes, providing an optimal user experience on desktop and mobile devices.
+                    Designed and developed a responsive personal portfolio website using HTML, CSS, and JavaScript to showcase projects, skills, and experience. The site has a simple design with smooth scrolling navigation, interactive project cards with technology icons, and a dynamic contact form. It adapts to different screen sizes, providing an optimal user experience on desktop and mobile devices.
                 </p>
                 <a href="https://github.com/czerny1728/czerny1728.github.io" target="_blank" class="github-button">
                     <i data-lucide="github"></i> GitHub
