--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
                     </div>
                 </div>
                 <p class="project-description">
-                    A 2D arcade game built using Java. Players control a bird as it attempts to fly through a series of pipes without touching them. The game features simple controls—just press SPACE to make the bird fly upward, while gravity pulls it downward automatically. Players aim to achieve the highest score by navigating through as many pipes as possible while avoiding collisions.
+                    A 2D arcade game built using Java. Players control a bird as it attempts to fly through a series of pipes without touching them. The game features simple controls—just press SPACE to make the bird fly upward, while gravity pulls it downward automatically. Players aim to achieve the highest score by navigating through as many pipes as possible, whilst avoiding collisions.
                 </p>
                 <a href="https://github.com/czerny1728/flappy-bird" target="_blank" class="github-button">
                     <i data-lucide="github"></i> GitHub
@@ -38,7 +38,7 @@
                     </div>
                 </div>
                 <p class="project-description">
-                    Designed and developed a responsive personal portfolio website using HTML, CSS, and JavaScript to showcase projects, skills, and experience. The site has a simple design with smooth scrolling navigation, interactive project cards with technology icons, and a dynamic contact form. It adapts to different screen sizes, providing an optimal user experience on desktop and mobile devices.
+                    Designed and developed a responsive personal portfolio website using HTML, CSS and JavaScript to showcase projects, skills and experience. The site has a simple design with smooth scrolling navigation, interactive project cards with technology icons and a dynamic contact form. It adapts to different screen sizes, providing an optimal user experience on desktop and mobile devices.
                 </p>
                 <a href="https://github.com/czerny1728/czerny1728.github.io" target="_blank" class="github-button">
                     <i data-lucide="github"></i> GitHub
