--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Long Nguyen • Portfolio</title>
+
+    <script>
+        if ('scrollRestoration' in history) {
+            history.scrollRestoration = 'manual';
+        }
+    </script>
+
     <link rel="apple-touch-icon" sizes="152x152" href="assets/icons/apple-icon-152x152.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/apple-icon-180x180.png" />
     <link rel="icon" type="image/png" sizes="192x192" href="assets/icons/android-icon-192x192.png" />
@@ -42,7 +49,7 @@
     <div class="intro">
         <img src="assets/images/profile-pic.jpeg" alt="Your profile photo" class="profile-pic" />
         <h1 class="intro-heading">Long Nguyen</h1>
-        <p class="intro-subtext">Computer Science student passionate about full-stack development, software development and AI.</p>
+        <p class="intro-subtext">Computer Science student passionate about software development, algorithm design and AI.</p>
         <div class="social-links">
             <a href="https://github.com/czerny1728" target="_blank" class="social-button">
                 <i data-lucide="github"></i> GitHub
