--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta property="og:title" content="Long Nguyen • Portfolio" />
+    <meta property="og:description" content="Portfolio of Long Nguyen, a Computer Science student passionate about software development, AI and algorithm design. Explore my projects and skills." />
+    <!-- <meta property="og:image" content="https://longuyen.co.uk/assets/images/personal-web-prev.png" /> -->
+    <meta property="og:url" content="https://longuyen.co.uk" />
+    <meta property="og:type" content="website" />
+
     <title>Long Nguyen • Portfolio</title>
     <link rel="apple-touch-icon" sizes="152x152" href="assets/icons/apple-icon-152x152.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/apple-icon-180x180.png" />
