feat(seo): add sitemap.xml with homepage and anchor sections

--- a/projects.html
+++ b/projects.html
@@ -38,7 +38,7 @@
                     </div>
                 </div>
                 <p class="project-description">
-                    Designed and developed a responsive personal portfolio website using HTML, CSS and JavaScript to showcase projects, skills and experience. The site has a simple design with smooth scrolling navigation, interactive project cards with technology icons and a dynamic contact form. It adapts to different screen sizes, providing an optimal user experience on desktop and mobile devices.
+                    Designed and developed a responsive personal portfolio website using HTML, CSS and JavaScript to showcase projects, skills and experience. The site has a simple design with smooth scrolling navigation, project cards with technology icons and a dynamic contact form. It adapts to different screen sizes for an optimal user experience on desktop and mobile devices.
                 </p>
                 <a href="https://github.com/czerny1728/czerny1728.github.io" target="_blank" class="github-button">
                     <i data-lucide="github"></i> GitHub
