--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <meta property="og:type" content="website" />
 
     <title>Long Nguyen • Portfolio</title>
+    <link rel="canonical" href="https://longuyen.co.uk" />
+
     <link rel="apple-touch-icon" sizes="152x152" href="assets/icons/apple-icon-152x152.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/apple-icon-180x180.png" />
     <link rel="icon" type="image/png" sizes="192x192" href="assets/icons/android-icon-192x192.png" />
@@ -18,14 +20,15 @@
     <link rel="icon" type="image/png" sizes="96x96" href="assets/icons/favicon-96x96.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="assets/icons/favicon-16x16.png" />
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+
     <link rel="stylesheet" href="css/style.css" />
     <script defer src="js/script.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet" />
     <script src="https://code.iconify.design/iconify-icon/1.0.8/iconify-icon.min.js"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
 </head>
-<body>
 
+<body>
 <!--Navigation Bar-->
 <header id="navbar" class="top-nav nav-glass">
     <nav class="nav-full">
