feat: add meta description for SEO optimisation

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Portfolio of Long Nguyen, a Computer Science student passionate about software development, AI and algorithm design. Explore my projects and skills.">
 
     <meta property="og:title" content="Long Nguyen • Portfolio" />
     <meta property="og:description" content="Portfolio of Long Nguyen, a Computer Science student passionate about software development, AI and algorithm design. Explore my projects and skills." />
