feat(images): replaced some image formats with optimised WebP versions

--- a/education.html
+++ b/education.html
@@ -1,7 +1,7 @@
 <section id="education" class="section">
   <h2 class="section-title">Education</h2>
   <div class="glass education-card">
-    <img src="assets/images/university-logo.png" alt="University Logo" class="university-logo" />
+    <img src="assets/images/university-logo.webp" alt="University Logo" class="university-logo" />
     <div class="education-info">
       <h3 class="degree-title">Bachelor of Science in Computer Science</h3>
       <p class="university-name">The University of Virginia</p>
