--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <section id="home" class="home-section">
     <div class="home-bg"></div>
     <div class="intro">
-        <img src="assets/images/profile-pic.jpeg" alt="Your profile photo" class="profile-pic" />
+        <img src="assets/images/profile-pic.webp" alt="Your profile photo" class="profile-pic" />
         <h1 class="intro-heading">Long Nguyen</h1>
         <p class="intro-subtext">Computer Science student passionate about software development, algorithm design and AI.</p>
         <div class="social-links">
