--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,7 @@
                 </a>
             </div>
             <div class="project-image">
-                <img src="assets/images/flappy-preview.png" alt="Flappy Bird preview" />
+                <img src="assets/images/flappy-preview.webp" alt="Flappy Bird preview" />
             </div>
         </div>
     </div>
@@ -45,7 +45,7 @@
                 </a>
             </div>
             <div class="project-image">
-                <img src="assets/images/personal-web-prev.png" alt="Flappy Bird preview" />
+                <img src="assets/images/personal-web-prev.webp" alt="Personal Website preview" />
             </div>
         </div>
     </div>
