feat: convert gif to mp4 for better performance

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Portfolio of Long Nguyen, a Computer Science student passionate about software development, AI and algorithm design. Explore my projects and skills.">
-    <meta name="theme-color" content="#294b5b">
-
+    <meta name="theme-color" content="#2c5565">
 
     <meta property="og:title" content="Long Nguyen • Portfolio" />
     <meta property="og:description" content="Portfolio of Long Nguyen, a Computer Science student passionate about software development, AI and algorithm design. Explore my projects and skills." />
@@ -51,7 +50,11 @@
 
 <!--Home-->
 <section id="home" class="home-section">
-    <div class="home-bg"></div>
+    <video class="home-bg" autoplay muted loop playsinline>
+        <source src="assets/images/background2.mp4" type="video/mp4">
+        <source src="assets/images/background.webm" type="video/webm">
+        <img src="assets/images/test.gif" alt="Background animation" />
+    </video>
     <div class="intro">
         <img src="assets/images/profile-pic.webp" alt="Your profile photo" class="profile-pic" />
         <h1 class="intro-heading">Long Nguyen</h1>
