feat(background): implement high-res video background with proper scaling

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Portfolio of Long Nguyen, a Computer Science student passionate about software development, AI and algorithm design. Explore my projects and skills.">
-    <meta name="theme-color" content="#2c5565">
+    <meta name="theme-color" content="#2a5066">
 
     <meta property="og:title" content="Long Nguyen • Portfolio" />
     <meta property="og:description" content="Portfolio of Long Nguyen, a Computer Science student passionate about software development, AI and algorithm design. Explore my projects and skills." />
@@ -51,7 +51,7 @@
 <!--Home-->
 <section id="home" class="home-section">
     <video class="home-bg" autoplay muted loop playsinline>
-        <source src="assets/images/background2.mp4" type="video/mp4">
+        <source src="assets/images/background.mp4" type="video/mp4">
         <source src="assets/images/background.webm" type="video/webm">
     </video>
     <div class="intro">
