feat(skills): add new skills section and standardise icon styles

--- a/skills.html
+++ b/skills.html
@@ -9,11 +9,11 @@
         Java
       </span>
             <span class="skill-pill">
-        <iconify-icon icon="logos:python"></iconify-icon>
+        <iconify-icon icon="skill-icons:python-light"></iconify-icon>
         Python
       </span>
             <span class="skill-pill">
-        <iconify-icon icon="streamline-logos:c-language-logo-solid"></iconify-icon>
+        <iconify-icon icon="skill-icons:c"></iconify-icon>
         C
       </span>
             <span class="skill-pill">
@@ -26,23 +26,42 @@
     <div class="category-divider"></div>
 
     <div class="skills-category">
+        <h3 class="skills-heading">Frontend</h3>
+        <div class="skills-list">
+      <span class="skill-pill">
+        <iconify-icon icon="skill-icons:html"></iconify-icon>
+        HTML5
+      </span>
+            <span class="skill-pill">
+        <iconify-icon icon="skill-icons:css"></iconify-icon>
+        CSS3
+      </span>
+            <span class="skill-pill">
+        <iconify-icon icon="skill-icons:javascript"></iconify-icon>
+        JavaScript
+      </span>
+        </div>
+    </div>
+
+    <div class="category-divider"></div>
+
+    <div class="skills-category">
         <h3 class="skills-heading">Practices</h3>
         <div class="skills-list">
       <span class="skill-pill">
-        <i data-lucide="layers" class="skill-icon"></i>
         Object-Oriented Programming (OOP)
       </span>
             <span class="skill-pill">
-        <i data-lucide="list" class="skill-icon"></i>
         Data Structures
       </span>
             <span class="skill-pill">
-        <i data-lucide="check-circle" class="skill-icon"></i>
         Unit Testing
       </span>
             <span class="skill-pill">
-        <i data-lucide="terminal" class="skill-icon"></i>
-        Test Driven Development (TDD)
+        Test-Driven Development (TDD)
+      </span>
+            <span class="skill-pill">
+        Database Design
       </span>
         </div>
     </div>
