--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <!--Home-->
 <section id="home" class="home-section">
-    <video class="home-bg" autoplay muted loop playsinline>
+    <video class="home-bg" autoplay muted loop playsinline poster="assets/images/fallback.webp">
         <source src="assets/images/background.mp4" type="video/mp4">
         <source src="assets/images/background.webm" type="video/webm">
     </video>
