--- a/index.html
+++ b/index.html
@@ -15,6 +15,178 @@
     <title>Long Nguyen • Portfolio</title>
     <link rel="canonical" href="https://longuyen.co.uk" />
 
+    <style>
+        html.pre-scroll-lock,
+        body.pre-scroll-lock {
+            overflow: hidden;
+        }
+
+        body {
+            margin: 0;
+            font-family: 'Roboto', sans-serif;
+            background: none;
+            color: #fff;
+            scroll-behavior: smooth;
+            position: relative;
+            z-index: 0;
+        }
+
+        /* Top Nav */
+        .top-nav {
+            position: fixed;
+            top: 1.5rem;
+            left: 50%;
+            transform: translate(-50%, -100px);
+            opacity: 1;
+            height: 3.25rem;
+            width: 90%;
+            max-width: 36rem;
+            padding: 0 1.5rem;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background: rgba(255, 255, 255, 0.15);
+            border: 1px solid rgba(255, 255, 255, 0.6);
+            border-radius: 999px;
+            box-shadow: 0 8px 32px rgba(31, 38, 135, 0.2),
+            inset 0 4px 20px rgba(255, 255, 255, 0.3);
+            backdrop-filter: blur(0.5rem);
+            z-index: 1000;
+        }
+
+        .nav-list {
+            display: flex;
+            align-items: center;
+            gap: 1.25rem;
+            list-style: none;
+            margin: 0;
+            padding: 0;
+        }
+
+        .nav-link {
+            font-size: 15px;
+            padding: 0.25rem 0.75rem;
+            gap: 0.3rem;
+            text-decoration: none;
+            color: #fff;
+            font-weight: 500;
+            display: flex;
+            align-items: center;
+            border-radius: 999px;
+            transition: background 0.3s ease;
+            white-space: nowrap;
+        }
+
+        .nav-link:hover,
+        .nav-link.active {
+            background: rgba(255, 255, 255, 0.2);
+        }
+
+        /* Home Section */
+        .home-section {
+            position: relative;
+            height: 100vh;
+            overflow: hidden;
+            color: #fff;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+        }
+
+        .home-bg {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100vw;
+            height: 100vh;
+            object-fit: cover;
+            z-index: -1;
+            pointer-events: none;
+        }
+
+        .intro {
+            max-width: 600px;
+            padding: 2rem;
+        }
+
+        .profile-pic {
+            width: 120px;
+            height: 120px;
+            object-fit: cover;
+            object-position: center 20%;
+            border-radius: 50%;
+            border: 3px solid white;
+            margin-bottom: 1rem;
+            transform: scale(0);
+            opacity: 0;
+            transition: transform 0.6s ease-out, opacity 0.6s ease-out;
+        }
+
+        .profile-pic.animate-in {
+            transform: scale(1);
+            opacity: 1;
+        }
+
+        .intro-heading,
+        .intro-subtext {
+            opacity: 0;
+            transform: translateY(50px);
+            transition: transform 0.6s ease-out, opacity 0.6s ease-out;
+        }
+
+        .intro-heading.animate-in,
+        .intro-subtext.animate-in {
+            opacity: 1;
+            transform: translateY(0);
+        }
+
+        .social-links {
+            margin-top: 1.5rem;
+            display: flex;
+            gap: 1rem;
+            justify-content: center;
+            transform: translateY(50px);
+            opacity: 0;
+            transition: transform 0.6s ease-out, opacity 0.6s ease-out;
+        }
+
+        .social-links.animate-in {
+            transform: translateY(0);
+            opacity: 1;
+        }
+
+        .social-button {
+            display: inline-flex;
+            align-items: center;
+            gap: 0.4rem;
+            padding: 0.5rem 1rem;
+            font-size: 14px;
+            font-weight: 500;
+            color: #fff;
+            text-decoration: none;
+            border-radius: 999px;
+            background: rgba(255, 255, 255, 0.15);
+            backdrop-filter: blur(2px) saturate(180%);
+            border: 1px solid rgba(255, 255, 255, 0.8);
+            box-shadow: 0 8px 32px rgba(31, 38, 135, 0.2),
+            inset 0 4px 20px rgba(255, 255, 255, 0.3);
+            transition: background 0.3s ease;
+        }
+
+        .social-button:hover {
+            background: rgba(255, 255, 255, 0.25);
+        }
+
+        .social-button i {
+            width: 16px;
+            height: 16px;
+        }
+    </style>
+
+    <link rel="preload" href="css/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="css/style.css"></noscript>
+
     <link rel="apple-touch-icon" sizes="152x152" href="assets/icons/apple-icon-152x152.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/apple-icon-180x180.png" />
     <link rel="icon" type="image/png" sizes="192x192" href="assets/icons/android-icon-192x192.png" />
@@ -22,10 +194,14 @@
     <link rel="icon" type="image/png" sizes="96x96" href="assets/icons/favicon-96x96.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="assets/icons/favicon-16x16.png" />
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-
-    <link rel="stylesheet" href="css/style.css" />
     <script defer src="js/script.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter&display=swap&text=LongNguyenComputerScistudpabhvmlAWGitkH" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter&display=swap&text=LongNguyenComputerScistudpabhvmlAWGitkH">
+    </noscript>
     <script src="https://code.iconify.design/iconify-icon/1.0.8/iconify-icon.min.js"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
 </head>
@@ -55,7 +231,7 @@
         <source src="assets/images/background.webm" type="video/webm">
     </video>
     <div class="intro">
-        <img src="assets/images/profile-pic.webp" alt="Your profile photo" class="profile-pic" />
+        <img src="assets/images/profile-pic.webp" alt="Your profile photo" class="profile-pic" loading="eager"/>
         <h1 class="intro-heading">Long Nguyen</h1>
         <p class="intro-subtext">Computer Science student passionate about software development, algorithm design and AI.</p>
         <div class="social-links">
