perf: move custom script.js to end of body to fix render delay

--- a/index.html
+++ b/index.html
@@ -194,16 +194,15 @@
     <link rel="icon" type="image/png" sizes="96x96" href="assets/icons/favicon-96x96.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="assets/icons/favicon-16x16.png" />
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <script defer src="js/script.js"></script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter&display=swap&text=LongNguyenComputerScistudpabhvmlAWGitkH" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter&display=swap&text=LongNguyenComputerScistudpabhvmlAWGitkH">
     </noscript>
-    <script src="https://code.iconify.design/iconify-icon/1.0.8/iconify-icon.min.js"></script>
-    <script src="https://unpkg.com/lucide@latest"></script>
+    <script src="https://code.iconify.design/iconify-icon/1.0.8/iconify-icon.min.js" defer></script>
+    <script src="https://unpkg.com/lucide@latest" defer></script>
 </head>
 
 <body>
@@ -256,5 +255,6 @@
 <script>
     lucide.createIcons();
 </script>
+<script src="js/script.js"></script>
 </body>
 </html>
