fix: specify font-size for h1 to prevent browser warning

--- a/index.html
+++ b/index.html
@@ -135,6 +135,10 @@
             transition: transform 0.6s ease-out, opacity 0.6s ease-out;
         }
 
+        .intro-heading {
+            font-size: 1.5rem;
+        }
+
         .intro-heading.animate-in,
         .intro-subtext.animate-in {
             opacity: 1;
