chore: updated links to socials

--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
         <h1 class="intro-heading">Long Nguyen</h1>
         <p class="intro-subtext">Computer Science student passionate about software development, algorithm design and AI.</p>
         <div class="social-links">
-            <a href="https://github.com/czerny1728" target="_blank" class="social-button">
+            <a href="https://github.com/longknguyen" target="_blank" class="social-button">
                 <i data-lucide="github"></i> GitHub
             </a>
             <a href="https://www.linkedin.com/in/long-nguyen-a3473a286/" target="_blank" class="social-button">
