feat(projects): add Online Bookstore project card with tech icons and description

--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
                     </div>
                 </div>
                 <p class="project-description">
-                    A 2D arcade game built using Java. Players control a bird as it attempts to fly through a series of pipes without touching them. The game features simple controls—just press SPACE to make the bird fly upward, while gravity pulls it downward automatically. Players aim to achieve the highest score by navigating through as many pipes as possible, whilst avoiding collisions.
+                    A 2D arcade game built using Java. Players control a bird as it attempts to fly through a series of pipes without touching them. The game features simple controls; press SPACE to make the bird fly upward, while gravity pulls it downward automatically. Players aim to achieve the highest score by navigating through as many pipes as possible, whilst avoiding collisions.
                 </p>
                 <a href="https://github.com/longknguyen/flappy-bird" target="_blank" class="github-button">
                     <i data-lucide="github"></i> GitHub
@@ -19,6 +19,31 @@
             </div>
             <div class="project-image">
                 <img src="assets/images/flappy-preview.webp" alt="Flappy Bird preview" loading="lazy"/>
+            </div>
+        </div>
+    </div>
+
+    <div class="glass project-card">
+        <div class="project-content">
+            <div class="project-details">
+                <h3>Online Bookstore</h3>
+                <div class="tech-stack">
+                    <span class="made-with">Made with:</span>
+                    <div class="tech-icons">
+                        <iconify-icon icon="skill-icons:java-light" width="35"></iconify-icon>
+                        <iconify-icon icon="skill-icons:html" width="35"></iconify-icon>
+                        <iconify-icon icon="skill-icons:css" width="35"></iconify-icon>
+                    </div>
+                </div>
+                <p class="project-description">
+                    A Java-based online bookstore application featuring separate modules for customers and administrators. Users can browse books, view details and manage their shopping selections, while administrators can add books through a dedicated interface. The system uses a database-backed design with JDBC for persistence to ensure reliable storage and retrieval of book data.
+                </p>
+                <a href="https://github.com/longknguyen/online-book-store" target="_blank" class="github-button">
+                    <i data-lucide="github"></i> GitHub
+                </a>
+            </div>
+            <div class="project-image">
+                <img id="bookstore-slideshow" src="assets/images/bookstoreindex.webp" alt="Online Bookstore preview" loading="lazy"/>
             </div>
         </div>
     </div>
